--- a/BBL_ProjetoDS/BLL_ProjetoDS.csproj
+++ b/BBL_ProjetoDS/BLL_ProjetoDS.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FuncionarioBLL.cs" />
     <Compile Include="LoginBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
