--- a/DAL_ProjetoDS/DAL_ProjetoDS.csproj
+++ b/DAL_ProjetoDS/DAL_ProjetoDS.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FuncionarioDAL.cs" />
     <Compile Include="LoginDAL.cs" />
     <Compile Include="Conexao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
