--- a/BBL_ProjetoDS/BLL_ProjetoDS.csproj
+++ b/BBL_ProjetoDS/BLL_ProjetoDS.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="FuncionarioBLL.cs" />
     <Compile Include="LoginBLL.cs" />
+    <Compile Include="ProdutoBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
