--- a/DAL_ProjetoDS/DAL_ProjetoDS.csproj
+++ b/DAL_ProjetoDS/DAL_ProjetoDS.csproj
@@ -44,6 +44,7 @@
     <Compile Include="FuncionarioDAL.cs" />
     <Compile Include="LoginDAL.cs" />
     <Compile Include="Conexao.cs" />
+    <Compile Include="ProdutoDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
