--- a/DTO_ProjetoDS/DTO_ProjetoDS.csproj
+++ b/DTO_ProjetoDS/DTO_ProjetoDS.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="LoginDTO.cs" />
     <Compile Include="PessoaDTO.cs" />
+    <Compile Include="ProdutoDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
