--- a/BBL_ProjetoDS/BLL_ProjetoDS.csproj
+++ b/BBL_ProjetoDS/BLL_ProjetoDS.csproj
@@ -45,6 +45,7 @@
     <Compile Include="LoginBLL.cs" />
     <Compile Include="ProdutoBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VendaBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL_ProjetoDS\DAL_ProjetoDS.csproj">
