--- a/DAL_ProjetoDS/DAL_ProjetoDS.csproj
+++ b/DAL_ProjetoDS/DAL_ProjetoDS.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Conexao.cs" />
     <Compile Include="ProdutoDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VendaDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO_ProjetoDS\DTO_ProjetoDS.csproj">
